@@ -1,3 +1,7 @@
+29 March 2010
+	examples/TIPTransformM.hs, the monadic version of
+	TIPTransform.hs
+	
 17 February 2010
 	Two patches from Adam Vogt to get the code compile on ghc-6.12
 	and to make Record Typeable instances nonstrict
